k8s/document-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sk-team-09-ai-document
  namespace: sk-team-09
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sk-team-09-ai
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8001"
        prometheus.io/path: "/actuator/prometheus"
      labels:
        app: sk-team-09-ai
    spec:
      serviceAccountName: default
      imagePullSecrets:
        - name: amdp-registry
      containers:
        - name: sk-team-09-ai
          image: amdp-registry.skala-ai.com/skala25a/sk-team-09-ai:1.0.0-130-60dc7c2930c9
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          command: ["celery"]
          args:
            - "-A"
            - "config.tasks"
            - "worker"
            - "--loglevel=info"
            - "-Q"
            - "preprocessing_queue"
            - "--concurrency=4"
          volumeMounts:
            - name: document-volume
              mountPath: app/data
      volumes:
        - name: document-volume
          persistentVolumeClaim:
            claimName: skib-documents-ai-pvc
