k8s/test_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sk-team-09-ai
  namespace: sk-team-09
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sk-team-09-ai
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8001"
        prometheus.io/path: "/actuator/prometheus"
      labels:
        app: sk-team-09-ai
    spec:
      serviceAccountName: default
      imagePullSecrets:
        - name: amdp-registry
      containers:
        - name: sk-team-09-ai
          image: amdp-registry.skala-ai.com/skala25a/sk-team-09-ai:1.0.0-82-c1d64f4fb1c0
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          command: ["celery"]
          args:
            - "-A"
            - "config.tasks"
            - "worker"
            - "--loglevel=info"
            - "-Q"
            - "generation_queue"
            - "--concurrency=4"
