k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: sk-team-09-ai
  namespace: sk-team-09
spec:
  ingressClassName: public-nginx
  rules:
    - host: skib-ai.skala25a.project.skala-ai.com
      http:
        paths:
          - backend:
              service:
                name: sk-team-09-ai
                port:
                  number: 8000
            path: /api
            pathType: Prefix
          - backend:
              service:
                name: sk-team-09-ai
                port:
                  number: 8001
            path: /actuator
            pathType: Prefix
          - backend:
              service:
                name: sk-team-09-ai
                port:
                  number: 8000
            path: /docs
            pathType: Prefix
          - backend:
              service:
                name: sk-team-09-ai
                port:
                  number: 8000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "skib-ai.skala25a.project.skala-ai.com"
      secretName: skib-ai-tls-cert
